--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -4,17 +4,18 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
-    "import torchvision\n",
-    "from torch.utils.data import DataLoader\n",
-    "import torchvision.transforms as transforms\n",
-    "\n",
-    "device = torch.device(\"cpu\")\n",
-    "if torch.cuda.is_available():\n",
+    "import torch\r\n",
+    "import torch.nn as nn\r\n",
+    "import torch.optim as optim\r\n",
+    "from tqdm import tqdm\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "import torchvision\r\n",
+    "from torch.utils.data import DataLoader\r\n",
+    "import torchvision.transforms as transforms\r\n",
+    "from torch.utils.tensorboard import SummaryWriter\r\n",
+    "\r\n",
+    "device = torch.device(\"cpu\")\r\n",
+    "if torch.cuda.is_available():\r\n",
     "    device = torch.device(\"cuda\")"
    ],
    "outputs": [],
@@ -24,7 +25,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "batch = 32"
+    "batch = 16"
    ],
    "outputs": [],
    "metadata": {}
@@ -33,11 +34,11 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "dataset = torchvision.datasets.ImageFolder(\"data\", transforms.Compose([\n",
-    "    transforms.ToTensor(),\n",
-    "]))\n",
-    "\n",
-    "dataloader = DataLoader(dataset=dataset, batch_size=batch, shuffle=True, pin_memory=True, num_workers=6,)"
+    "dataset = torchvision.datasets.ImageFolder(\"data\", transforms.Compose([\r\n",
+    "    transforms.ToTensor(),\r\n",
+    "]))\r\n",
+    "\r\n",
+    "dataloader = DataLoader(dataset=dataset, batch_size=batch, shuffle=True, pin_memory=True, num_workers=6,drop_last=True)"
    ],
    "outputs": [],
    "metadata": {}
@@ -46,78 +47,78 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "class Generator(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(Generator, self).__init__()\n",
-    "        self.form = nn.Linear(100,16384)\n",
-    "        self.seq = nn.Sequential(\n",
-    "            nn.ConvTranspose2d(1024,512,4,2,1),\n",
-    "            nn.BatchNorm2d(512),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.ConvTranspose2d(512,256,4,2,1),\n",
-    "            nn.BatchNorm2d(256),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.ConvTranspose2d(256,128,4,2,1),\n",
-    "            nn.BatchNorm2d(128),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.ConvTranspose2d(128,64,4,2,1),\n",
-    "            nn.BatchNorm2d(64),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.ConvTranspose2d(64,32,4,2,1),\n",
-    "            nn.BatchNorm2d(32),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.ConvTranspose2d(32,16,4,2,1),\n",
-    "            nn.BatchNorm2d(16),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.ConvTranspose2d(16,8,4,2,1),\n",
-    "            nn.BatchNorm2d(8),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.ConvTranspose2d(8,3,4,2,1),\n",
-    "            nn.BatchNorm2d(3),\n",
-    "            nn.Sigmoid(),\n",
-    "        )\n",
-    "    \n",
-    "    def forward(self, value):\n",
-    "        value = self.form(value)\n",
-    "        value = value.view(-1,1024,4,4)\n",
-    "        return self.seq(value)\n",
-    "\n",
-    "class Discriminator(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(Discriminator, self).__init__()\n",
-    "        self.seq = nn.Sequential(\n",
-    "            nn.Conv2d(3,8,4,2,1),\n",
-    "            nn.BatchNorm2d(8),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.Conv2d(8,16,4,2,1),\n",
-    "            nn.BatchNorm2d(16),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.Conv2d(16,32,4,2,1),\n",
-    "            nn.BatchNorm2d(32),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.Conv2d(32,64,4,2,1),\n",
-    "            nn.BatchNorm2d(64),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.Conv2d(64,128,4,2,1),\n",
-    "            nn.BatchNorm2d(128),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.Conv2d(128,256,4,2,1),\n",
-    "            nn.BatchNorm2d(256),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.Conv2d(256,512,4,2,1),\n",
-    "            nn.BatchNorm2d(512),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.Conv2d(512,1024,4,2,1),\n",
-    "            nn.BatchNorm2d(1024),\n",
-    "            nn.LeakyReLU(),\n",
-    "        )\n",
-    "        self.linear = nn.Linear(16384,1)\n",
-    "        self.sigmoid = nn.Sigmoid()\n",
-    "\n",
-    "    def forward(self, value):\n",
-    "        value = self.seq(value)\n",
-    "        value = value.view(-1,16384)\n",
-    "        value = self.linear(value)\n",
+    "class Generator(nn.Module):\r\n",
+    "    def __init__(self):\r\n",
+    "        super(Generator, self).__init__()\r\n",
+    "        self.form = nn.Linear(100,16384)\r\n",
+    "        self.seq = nn.Sequential(\r\n",
+    "            nn.ConvTranspose2d(1024,512,4,2,1),\r\n",
+    "            nn.BatchNorm2d(512),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.ConvTranspose2d(512,256,4,2,1),\r\n",
+    "            nn.BatchNorm2d(256),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.ConvTranspose2d(256,128,4,2,1),\r\n",
+    "            nn.BatchNorm2d(128),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.ConvTranspose2d(128,64,4,2,1),\r\n",
+    "            nn.BatchNorm2d(64),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.ConvTranspose2d(64,32,4,2,1),\r\n",
+    "            nn.BatchNorm2d(32),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.ConvTranspose2d(32,16,4,2,1),\r\n",
+    "            nn.BatchNorm2d(16),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.ConvTranspose2d(16,8,4,2,1),\r\n",
+    "            nn.BatchNorm2d(8),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.ConvTranspose2d(8,3,4,2,1),\r\n",
+    "            nn.BatchNorm2d(3),\r\n",
+    "            nn.Sigmoid(),\r\n",
+    "        )\r\n",
+    "    \r\n",
+    "    def forward(self, value):\r\n",
+    "        value = self.form(value)\r\n",
+    "        value = value.view(-1,1024,4,4)\r\n",
+    "        return self.seq(value)\r\n",
+    "\r\n",
+    "class Discriminator(nn.Module):\r\n",
+    "    def __init__(self):\r\n",
+    "        super(Discriminator, self).__init__()\r\n",
+    "        self.seq = nn.Sequential(\r\n",
+    "            nn.Conv2d(3,8,4,2,1),\r\n",
+    "            nn.BatchNorm2d(8),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.Conv2d(8,16,4,2,1),\r\n",
+    "            nn.BatchNorm2d(16),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.Conv2d(16,32,4,2,1),\r\n",
+    "            nn.BatchNorm2d(32),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.Conv2d(32,64,4,2,1),\r\n",
+    "            nn.BatchNorm2d(64),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.Conv2d(64,128,4,2,1),\r\n",
+    "            nn.BatchNorm2d(128),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.Conv2d(128,256,4,2,1),\r\n",
+    "            nn.BatchNorm2d(256),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.Conv2d(256,512,4,2,1),\r\n",
+    "            nn.BatchNorm2d(512),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "            nn.Conv2d(512,1024,4,2,1),\r\n",
+    "            nn.BatchNorm2d(1024),\r\n",
+    "            nn.LeakyReLU(),\r\n",
+    "        )\r\n",
+    "        self.linear = nn.Linear(16384,1)\r\n",
+    "        self.sigmoid = nn.Sigmoid()\r\n",
+    "\r\n",
+    "    def forward(self, value):\r\n",
+    "        value = self.seq(value)\r\n",
+    "        value = value.view(-1,16384)\r\n",
+    "        value = self.linear(value)\r\n",
     "        return self.sigmoid(value)"
    ],
    "outputs": [],
@@ -127,59 +128,65 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "def weights_init(m):\n",
-    "    classname = m.__class__.__name__\n",
-    "    if classname.find('Conv') != -1:\n",
-    "        nn.init.normal_(m.weight.data, 0.0, 0.02)\n",
-    "    elif classname.find('BatchNorm') != -1:\n",
-    "        nn.init.normal_(m.weight.data, 1.0, 0.02)\n",
-    "        nn.init.constant_(m.bias.data, 0)\n",
-    "\n",
-    "def train(dataloader, epoch):\n",
-    "    static_noise = torch.randn(1,100, device=device)\n",
-    "\n",
-    "    Dnet = Discriminator()\n",
-    "    Dnet.train()\n",
-    "    Dnet.apply(weights_init)\n",
-    "    Dnet.to(device=device)\n",
-    "    print(Dnet)\n",
-    "\n",
-    "    Gnet = Generator()\n",
-    "    Gnet.train()\n",
-    "    Gnet.apply(weights_init)\n",
-    "    Gnet.to(device=device)\n",
-    "    print(Gnet)\n",
-    "\n",
-    "    criterion = nn.BCELoss().to(device=device)\n",
-    "    optimD = optim.Adam(Dnet.parameters(), lr=0.01)\n",
-    "    optimG = optim.Adam(Gnet.parameters(), lr=0.0003)\n",
-    "\n",
-    "    for i in range(epoch):\n",
-    "        for image, _ in tqdm(dataloader):\n",
-    "            image = image.to(device=device)\n",
-    "            label_fake = torch.full((batch, 1), 0.0 , dtype=torch.float, device=device)\n",
-    "            label_real = torch.full((batch, 1), 1.0 , dtype=torch.float, device=device)\n",
-    "\n",
-    "            Dnet.zero_grad()\n",
-    "            Dout = Dnet(image)\n",
-    "            loss = criterion(Dout, label_real) \n",
-    "            loss.backward()\n",
-    "\n",
-    "            noise = torch.randn(32, 100, device=device)\n",
-    "            Gout = Gnet(noise)\n",
-    "            Dout = Dnet(Gout.detach())\n",
-    "            loss = criterion(Dout, label_fake)\n",
-    "            loss.backward()\n",
-    "            optimD.step()\n",
-    "            \n",
-    "\n",
-    "            Gnet.zero_grad()\n",
-    "            Gout = Dnet(Gout)\n",
-    "            loss_fake = criterion(Gout,label_real)\n",
-    "            loss_fake.backward()\n",
-    "            optimG.step()\n",
-    "        plt.imshow(Gnet(static_noise)[0].permute(1,2,0).cpu().detach().numpy())\n",
-    "        plt.show()"
+    "def weights_init(m):\r\n",
+    "    classname = m.__class__.__name__\r\n",
+    "    if classname.find('Conv') != -1:\r\n",
+    "        nn.init.normal_(m.weight.data, 0.0, 0.02)\r\n",
+    "    elif classname.find('BatchNorm') != -1:\r\n",
+    "        nn.init.normal_(m.weight.data, 1.0, 0.02)\r\n",
+    "        nn.init.constant_(m.bias.data, 0)\r\n",
+    "\r\n",
+    "def train(dataloader, epoch):\r\n",
+    "\r\n",
+    "    Dnet = Discriminator()\r\n",
+    "    Dnet.train()\r\n",
+    "    Dnet.apply(weights_init)\r\n",
+    "    Dnet.to(device=device)\r\n",
+    "    print(Dnet)\r\n",
+    "\r\n",
+    "    Gnet = Generator()\r\n",
+    "    Gnet.train()\r\n",
+    "    Gnet.apply(weights_init)\r\n",
+    "    Gnet.to(device=device)\r\n",
+    "    print(Gnet)\r\n",
+    "\r\n",
+    "    criterion = nn.BCELoss().to(device=device)\r\n",
+    "    optimD = optim.Adam(Dnet.parameters(), lr=0.0003,betas=(0.5,0.999))\r\n",
+    "    optimG = optim.Adam(Gnet.parameters(), lr=0.0003,betas=(0.5,0.999))\r\n",
+    "\r\n",
+    "    static_noise = torch.randn(batch, 100, device=device)\r\n",
+    "    writer = SummaryWriter()\r\n",
+    "    writer.add_images(\"TestImages/base\", Gnet(static_noise).cpu(), 0, dataformats='NCHW')\r\n",
+    "\r\n",
+    "    for i in range(epoch):\r\n",
+    "        print(f\"epoch: {i+1}\")\r\n",
+    "        for image, _ in tqdm(dataloader):\r\n",
+    "            image = image.to(device=device)\r\n",
+    "\r\n",
+    "            Dout = Dnet(image).reshape(-1)\r\n",
+    "            loss_real = criterion(Dout, torch.ones_like(Dout)) \r\n",
+    "\r\n",
+    "            noise = torch.randn(batch, 100, device=device)\r\n",
+    "            Gout = Gnet(noise)\r\n",
+    "            Dout = Dnet(Gout.detach()).reshape(-1)\r\n",
+    "            loss_fake = criterion(Dout, torch.zeros_like(Dout))   \r\n",
+    "            for param in Dnet.parameters():\r\n",
+    "                param.grad = None\r\n",
+    "            loss = (loss_fake + loss_real)/2\r\n",
+    "            loss.backward(retain_graph = True)\r\n",
+    "            optimD.step()\r\n",
+    "            \r\n",
+    "            Dout = Dnet(Gout).reshape(-1)\r\n",
+    "            loss = criterion(Dout,torch.zeros_like(Dout))\r\n",
+    "            for param in Gnet.parameters():\r\n",
+    "                param.grad = None\r\n",
+    "            loss.backward()\r\n",
+    "            optimG.step()\r\n",
+    "        writer.add_images(f\"TestImages/epoch-{i +1}\", Gnet(static_noise).cpu(), i+1, dataformats='NCHW')\r\n",
+    "    \r\n",
+    "    writer.flush()\r\n",
+    "    writer.close()\r\n",
+    "    return Gnet"
    ],
    "outputs": [],
    "metadata": {}
@@ -188,7 +195,13 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "train(dataloader,1)"
+    "def start():\r\n",
+    "    model = train(dataloader, 3)\r\n",
+    "    PATH = './model/Gnet.pth'\r\n",
+    "    torch.save(model, PATH)\r\n",
+    "            \r\n",
+    "if __name__ == \"__main__\":\r\n",
+    "    start()"
    ],
    "outputs": [],
    "metadata": {}
