--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -3,215 +3,239 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "import torch\r\n",
-    "import torch.nn as nn\r\n",
-    "import torch.optim as optim\r\n",
-    "from tqdm import tqdm\r\n",
-    "import matplotlib.pyplot as plt\r\n",
-    "import torchvision\r\n",
-    "from torch.utils.data import DataLoader\r\n",
-    "import torchvision.transforms as transforms\r\n",
-    "from torch.utils.tensorboard import SummaryWriter\r\n",
-    "\r\n",
-    "device = torch.device(\"cpu\")\r\n",
-    "if torch.cuda.is_available():\r\n",
-    "    device = torch.device(\"cuda\")"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torchvision.transforms.transforms import Resize\n",
+    "from tqdm import tqdm\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torchvision\n",
+    "from torch.utils.data import DataLoader\n",
+    "import torchvision.transforms as transforms\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    DEVICE = torch.device(\"cuda\")\n",
+    "else:\n",
+    "    DEVICE = torch.device(\"cpu\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "batch = 16"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "BATCH = 32\n",
+    "PATH = './model/'"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "dataset = torchvision.datasets.ImageFolder(\"data\", transforms.Compose([\r\n",
-    "    transforms.ToTensor(),\r\n",
-    "]))\r\n",
-    "\r\n",
-    "dataloader = DataLoader(dataset=dataset, batch_size=batch, shuffle=True, pin_memory=True, num_workers=6,drop_last=True)"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "DATASET = torchvision.datasets.ImageFolder(\"data\", transforms.Compose([\n",
+    "    transforms.ToTensor(), transforms.Resize(\n",
+    "        128), transforms.Normalize([0.5, 0.5, 0.5], [0.5, 0.5, 0.5])\n",
+    "]))\n",
+    "\n",
+    "DATALOADER = DataLoader(dataset=DATASET, batch_size=BATCH,\n",
+    "                        shuffle=True, pin_memory=True, num_workers=6, drop_last=True)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "class Generator(nn.Module):\r\n",
-    "    def __init__(self):\r\n",
-    "        super(Generator, self).__init__()\r\n",
-    "        self.form = nn.Linear(100,16384)\r\n",
-    "        self.seq = nn.Sequential(\r\n",
-    "            nn.ConvTranspose2d(1024,512,4,2,1),\r\n",
-    "            nn.BatchNorm2d(512),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(512,256,4,2,1),\r\n",
-    "            nn.BatchNorm2d(256),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(256,128,4,2,1),\r\n",
-    "            nn.BatchNorm2d(128),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(128,64,4,2,1),\r\n",
-    "            nn.BatchNorm2d(64),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(64,32,4,2,1),\r\n",
-    "            nn.BatchNorm2d(32),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(32,16,4,2,1),\r\n",
-    "            nn.BatchNorm2d(16),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(16,8,4,2,1),\r\n",
-    "            nn.BatchNorm2d(8),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(8,3,4,2,1),\r\n",
-    "            nn.BatchNorm2d(3),\r\n",
-    "            nn.Sigmoid(),\r\n",
-    "        )\r\n",
-    "    \r\n",
-    "    def forward(self, value):\r\n",
-    "        value = self.form(value)\r\n",
-    "        value = value.view(-1,1024,4,4)\r\n",
-    "        return self.seq(value)\r\n",
-    "\r\n",
-    "class Discriminator(nn.Module):\r\n",
-    "    def __init__(self):\r\n",
-    "        super(Discriminator, self).__init__()\r\n",
-    "        self.seq = nn.Sequential(\r\n",
-    "            nn.Conv2d(3,8,4,2,1),\r\n",
-    "            nn.BatchNorm2d(8),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.Conv2d(8,16,4,2,1),\r\n",
-    "            nn.BatchNorm2d(16),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.Conv2d(16,32,4,2,1),\r\n",
-    "            nn.BatchNorm2d(32),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.Conv2d(32,64,4,2,1),\r\n",
-    "            nn.BatchNorm2d(64),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.Conv2d(64,128,4,2,1),\r\n",
-    "            nn.BatchNorm2d(128),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.Conv2d(128,256,4,2,1),\r\n",
-    "            nn.BatchNorm2d(256),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.Conv2d(256,512,4,2,1),\r\n",
-    "            nn.BatchNorm2d(512),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.Conv2d(512,1024,4,2,1),\r\n",
-    "            nn.BatchNorm2d(1024),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "        )\r\n",
-    "        self.linear = nn.Linear(16384,1)\r\n",
-    "        self.sigmoid = nn.Sigmoid()\r\n",
-    "\r\n",
-    "    def forward(self, value):\r\n",
-    "        value = self.seq(value)\r\n",
-    "        value = value.view(-1,16384)\r\n",
-    "        value = self.linear(value)\r\n",
-    "        return self.sigmoid(value)"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "class Generator(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Generator, self).__init__()\n",
+    "        self.seq = nn.Sequential(\n",
+    "            nn.ConvTranspose2d(100, 1024, 4, bias=False),  # 4x4\n",
+    "            nn.BatchNorm2d(1024),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.ConvTranspose2d(1024, 512, 4, 2, 1, bias=False),  # 8x8\n",
+    "            nn.BatchNorm2d(512),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.ConvTranspose2d(512, 256, 4, 2, 1, bias=False),  # 16x16\n",
+    "            nn.BatchNorm2d(256),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.ConvTranspose2d(256, 128, 4, 2, 1, bias=False),  # 32x32\n",
+    "            nn.BatchNorm2d(128),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.ConvTranspose2d(128, 64, 4, 2, 1, bias=False),  # 64x64\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.ConvTranspose2d(64, 3, 4, 2, 1),  # 128x128\n",
+    "            nn.Tanh(),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, value):\n",
+    "        return self.seq(value)\n",
+    "\n",
+    "\n",
+    "class Critic(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Critic, self).__init__()\n",
+    "        self.seq = nn.Sequential(\n",
+    "            nn.Conv2d(3, 64, 4, 2, 1, bias=False),  # 64x64\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.Conv2d(64, 128, 4, 2, 1, bias=False),  # 32x32\n",
+    "            nn.BatchNorm2d(128),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.Conv2d(128, 256, 4, 2, 1, bias=False),  # 16x16\n",
+    "            nn.BatchNorm2d(256),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.Conv2d(256, 512, 4, 2, 1, bias=False),  # 8x8\n",
+    "            nn.BatchNorm2d(512),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.Conv2d(512, 1024, 4, 2, 1, bias=False),  # 4x4\n",
+    "            nn.BatchNorm2d(1024),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.Conv2d(1024, 1, 4),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, value):\n",
+    "        return self.seq(value)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "def weights_init(m):\r\n",
-    "    classname = m.__class__.__name__\r\n",
-    "    if classname.find('Conv') != -1:\r\n",
-    "        nn.init.normal_(m.weight.data, 0.0, 0.02)\r\n",
-    "    elif classname.find('BatchNorm') != -1:\r\n",
-    "        nn.init.normal_(m.weight.data, 1.0, 0.02)\r\n",
-    "        nn.init.constant_(m.bias.data, 0)\r\n",
-    "\r\n",
-    "def train(dataloader, epoch):\r\n",
-    "\r\n",
-    "    Dnet = Discriminator()\r\n",
-    "    Dnet.train()\r\n",
-    "    Dnet.apply(weights_init)\r\n",
-    "    Dnet.to(device=device)\r\n",
-    "    print(Dnet)\r\n",
-    "\r\n",
-    "    Gnet = Generator()\r\n",
-    "    Gnet.train()\r\n",
-    "    Gnet.apply(weights_init)\r\n",
-    "    Gnet.to(device=device)\r\n",
-    "    print(Gnet)\r\n",
-    "\r\n",
-    "    criterion = nn.BCELoss().to(device=device)\r\n",
-    "    optimD = optim.Adam(Dnet.parameters(), lr=0.0003,betas=(0.5,0.999))\r\n",
-    "    optimG = optim.Adam(Gnet.parameters(), lr=0.0003,betas=(0.5,0.999))\r\n",
-    "\r\n",
-    "    static_noise = torch.randn(batch, 100, device=device)\r\n",
-    "    writer = SummaryWriter()\r\n",
-    "    writer.add_images(\"TestImages/base\", Gnet(static_noise).cpu(), 0, dataformats='NCHW')\r\n",
-    "\r\n",
-    "    for i in range(epoch):\r\n",
-    "        print(f\"epoch: {i+1}\")\r\n",
-    "        for image, _ in tqdm(dataloader):\r\n",
-    "            image = image.to(device=device)\r\n",
-    "\r\n",
-    "            Dout = Dnet(image).reshape(-1)\r\n",
-    "            loss_real = criterion(Dout, torch.ones_like(Dout)) \r\n",
-    "\r\n",
-    "            noise = torch.randn(batch, 100, device=device)\r\n",
-    "            Gout = Gnet(noise)\r\n",
-    "            Dout = Dnet(Gout.detach()).reshape(-1)\r\n",
-    "            loss_fake = criterion(Dout, torch.zeros_like(Dout))   \r\n",
-    "            for param in Dnet.parameters():\r\n",
-    "                param.grad = None\r\n",
-    "            loss = (loss_fake + loss_real)/2\r\n",
-    "            loss.backward(retain_graph = True)\r\n",
-    "            optimD.step()\r\n",
-    "            \r\n",
-    "            Dout = Dnet(Gout).reshape(-1)\r\n",
-    "            loss = criterion(Dout,torch.zeros_like(Dout))\r\n",
-    "            for param in Gnet.parameters():\r\n",
-    "                param.grad = None\r\n",
-    "            loss.backward()\r\n",
-    "            optimG.step()\r\n",
-    "        writer.add_images(f\"TestImages/epoch-{i +1}\", Gnet(static_noise).cpu(), i+1, dataformats='NCHW')\r\n",
-    "    \r\n",
-    "    writer.flush()\r\n",
-    "    writer.close()\r\n",
-    "    return Gnet"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "def initialize_weights(model):\n",
+    "    for m in model.modules():\n",
+    "        if isinstance(m, (nn.Conv2d, nn.ConvTranspose2d)):\n",
+    "            nn.init.normal_(m.weight.data, 0.0, 0.02)\n",
+    "        if isinstance(m, (nn.BatchNorm2d)):\n",
+    "            nn.init.normal_(m.weight.data, 1.0, 0.02)\n",
+    "            nn.init.constant_(m.bias.data, 0)\n",
+    "\n",
+    "def train(dataloader, epoch):\n",
+    "\n",
+    "    critic = Critic()\n",
+    "    critic = torch.load(PATH + \"Cnet.pth\")\n",
+    "    critic.train()\n",
+    "    critic.apply(initialize_weights)\n",
+    "    critic.to(device=DEVICE)\n",
+    "    print(critic)\n",
+    "\n",
+    "    generator = Generator()\n",
+    "    generator = torch.load(PATH + \"Gnet.pth\")\n",
+    "    generator.train()\n",
+    "    generator.apply(initialize_weights)\n",
+    "    generator.to(device=DEVICE)\n",
+    "    print(generator)\n",
+    "\n",
+    "    optim_critic = optim.RMSprop(critic.parameters(), lr=0.00005)\n",
+    "    optim_generator = optim.RMSprop(generator.parameters(), lr=0.00005)\n",
+    "\n",
+    "    static_noise = torch.randn((BATCH, 100, 1, 1), device=DEVICE)\n",
+    "    tensorboard_step = 0\n",
+    "    writer = SummaryWriter(\"runs/GAN/test\")\n",
+    "\n",
+    "    ld = []\n",
+    "    lg = []\n",
+    "    for i in range(epoch):\n",
+    "        print(f\"epoch: {i+1}\")\n",
+    "        iter = 0\n",
+    "        for image, _ in tqdm(dataloader):\n",
+    "            image = image.to(device=DEVICE)\n",
+    "\n",
+    "            # train critic\n",
+    "            for _ in range(5):\n",
+    "                critic_noise = torch.randn((BATCH, 100, 1, 1), device=DEVICE)\n",
+    "                critic_fake = generator(critic_noise)\n",
+    "                critic_real = critic(image).reshape(-1)\n",
+    "                critic_output = critic(critic_fake).reshape(-1)\n",
+    "\n",
+    "                # wasserstein loss\n",
+    "                loss_critic = -(torch.mean(critic_real) -\n",
+    "                                torch.mean(critic_output))\n",
+    "\n",
+    "                ld.append(loss_critic.item())\n",
+    "                for param in critic.parameters():\n",
+    "                    param.grad = None\n",
+    "                loss_critic.backward(retain_graph=True)\n",
+    "                optim_critic.step()\n",
+    "\n",
+    "                # weight clipping\n",
+    "                for p in critic.parameters():\n",
+    "                    p.data.clamp_(-0.01, 0.01)\n",
+    "\n",
+    "            # train generator\n",
+    "            generator_noise = torch.randn((BATCH, 100, 1, 1), device=DEVICE)\n",
+    "            generator_fake = generator(generator_noise)\n",
+    "            generator_output = critic(generator_fake).reshape(-1)\n",
+    "            loss_generator = -torch.mean(generator_output)\n",
+    "            lg.append(loss_generator.item())\n",
+    "            for param in generator.parameters():\n",
+    "                param.grad = None\n",
+    "            loss_generator.backward()\n",
+    "            optim_generator.step()\n",
+    "            iter += 1\n",
+    "\n",
+    "            if iter % 50 == 0 or iter == 1:\n",
+    "                # unnecessary duplicated code\n",
+    "                logToTensorboard(ld, lg, generator_noise, writer,\n",
+    "                                 tensorboard_step, generator, image)\n",
+    "                tensorboard_step += 1\n",
+    "                ld = []\n",
+    "                lg = []\n",
+    "\n",
+    "        print(\"----------------\\n\\rsaving...\")\n",
+    "        torch.save(generator, PATH + \"Gnet.pth\")\n",
+    "        torch.save(generator, PATH + \"Cnet.pth\")\n",
+    "        writer.flush()\n",
+    "        print(\"saved\\n\\r----------------\")\n",
+    "    writer.flush()\n",
+    "    writer.close()\n",
+    "\n",
+    "def logToTensorboard(ld, lg, static_noise, writer, step, generator, real):\n",
+    "    with torch.no_grad():\n",
+    "        writer.add_scalars('current_run', {'loss_Critic': torch.mean(torch.tensor(ld)).item(\n",
+    "        ), 'loss_Generator': torch.mean(torch.tensor(lg)).item()}, global_step=step)\n",
+    "        test = generator(static_noise).cpu()\n",
+    "        test_grid = torchvision.utils.make_grid(\n",
+    "            test[:BATCH], normalize=True\n",
+    "        )\n",
+    "        writer.add_image(\"TestImage\", test_grid, global_step=step)\n",
+    "        real_grid = torchvision.utils.make_grid(\n",
+    "            real[:BATCH], normalize=True\n",
+    "        )\n",
+    "        writer.add_image(\"RealImage\", real_grid, global_step=step)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "def start():\r\n",
-    "    model = train(dataloader, 3)\r\n",
-    "    PATH = './model/Gnet.pth'\r\n",
-    "    torch.save(model, PATH)\r\n",
-    "            \r\n",
-    "if __name__ == \"__main__\":\r\n",
+    "def start():\n",
+    "    train(DATALOADER, 50)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
     "    start()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
   "language_info": {
    "name": "python"
-  }
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
