--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -15,37 +22,48 @@
     "import torchvision\n",
     "from torch.utils.data import DataLoader\n",
     "import torchvision.transforms as transforms\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
+    "from torch.utils.tensorboard import SummaryWriter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Constants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH = './model/'\n",
     "\n",
     "if torch.cuda.is_available():\n",
     "    DEVICE = torch.device(\"cuda\")\n",
     "else:\n",
-    "    DEVICE = torch.device(\"cpu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    DEVICE = torch.device(\"cpu\")\n",
+    "\n",
     "BATCH = 32\n",
-    "PATH = './model/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "IMAGESIZE = 256\n",
+    "\n",
     "DATASET = torchvision.datasets.ImageFolder(\"data\", transforms.Compose([\n",
-    "    transforms.ToTensor(), transforms.Resize(\n",
-    "        128), transforms.Normalize([0.5, 0.5, 0.5], [0.5, 0.5, 0.5])\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Resize(IMAGESIZE),\n",
+    "    transforms.Normalize([0.5, 0.5, 0.5], [0.5, 0.5, 0.5])\n",
     "]))\n",
     "\n",
     "DATALOADER = DataLoader(dataset=DATASET, batch_size=BATCH,\n",
     "                        shuffle=True, pin_memory=True, num_workers=6, drop_last=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resizable Neural Networks "
    ]
   },
   {
@@ -55,56 +73,89 @@
    "outputs": [],
    "source": [
     "class Generator(nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, image_size):\n",
     "        super(Generator, self).__init__()\n",
-    "        self.seq = nn.Sequential(\n",
-    "            nn.ConvTranspose2d(100, 1024, 4, bias=False),  # 4x4\n",
+    "        self.layers = nn.ModuleList()\n",
+    "\n",
+    "        self.layers.append(nn.Sequential(\n",
+    "            nn.ConvTranspose2d(100, 1024, 4, 1, 0, bias=False),\n",
     "            nn.BatchNorm2d(1024),\n",
+    "            nn.LeakyReLU()\n",
+    "        ))\n",
+    "\n",
+    "        for i in range(self.log2(image_size)-3):\n",
+    "            self.layers.append(self.ConvolutionalTransposeLayer(\n",
+    "                pow(2, 10 - i), pow(2, 10 - (i+1)), 4, 2, 1))\n",
+    "\n",
+    "        self.layers.append(nn.Sequential(\n",
+    "            nn.ConvTranspose2d(\n",
+    "                pow(2, 10 - self.log2(image_size) + 3), 3, 4, 2, 1),\n",
+    "            nn.Tanh()\n",
+    "        ))\n",
+    "\n",
+    "    def log2(self, x):\n",
+    "        return int(torch.log2(torch.tensor(x)).item())\n",
+    "\n",
+    "    def ConvolutionalTransposeLayer(self, input_size, output_size, kernel_size, stride, padding):\n",
+    "        return nn.Sequential(\n",
+    "            nn.ConvTranspose2d(input_size, output_size, kernel_size,\n",
+    "                               stride, padding, bias=False),\n",
+    "            nn.BatchNorm2d(output_size),\n",
     "            nn.LeakyReLU(),\n",
-    "            nn.ConvTranspose2d(1024, 512, 4, 2, 1, bias=False),  # 8x8\n",
-    "            nn.BatchNorm2d(512),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.ConvTranspose2d(512, 256, 4, 2, 1, bias=False),  # 16x16\n",
-    "            nn.BatchNorm2d(256),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.ConvTranspose2d(256, 128, 4, 2, 1, bias=False),  # 32x32\n",
-    "            nn.BatchNorm2d(128),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.ConvTranspose2d(128, 64, 4, 2, 1, bias=False),  # 64x64\n",
-    "            nn.BatchNorm2d(64),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.ConvTranspose2d(64, 3, 4, 2, 1),  # 128x128\n",
-    "            nn.Tanh(),\n",
     "        )\n",
     "\n",
     "    def forward(self, value):\n",
-    "        return self.seq(value)\n",
+    "        output = value\n",
+    "        for layer in self.layers:\n",
+    "            output = layer(output)\n",
+    "        return output\n",
     "\n",
     "\n",
     "class Critic(nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, image_size):\n",
     "        super(Critic, self).__init__()\n",
-    "        self.seq = nn.Sequential(\n",
-    "            nn.Conv2d(3, 64, 4, 2, 1, bias=False),  # 64x64\n",
-    "            nn.BatchNorm2d(64),\n",
+    "        self.layers = nn.ModuleList()\n",
+    "\n",
+    "        self.layers.append(nn.Sequential(\n",
+    "            nn.Conv2d(3, pow(2, 10 - self.log2(image_size) + 3),\n",
+    "                      4, 2, 1, bias=False),\n",
+    "            nn.BatchNorm2d(pow(2, 10 - self.log2(image_size) + 3)),\n",
     "            nn.LeakyReLU(),\n",
-    "            nn.Conv2d(64, 128, 4, 2, 1, bias=False),  # 32x32\n",
-    "            nn.BatchNorm2d(128),\n",
+    "        ))\n",
+    "\n",
+    "        for i in range(self.log2(image_size)-3):\n",
+    "            self.layers.append(\n",
+    "                self.ConvolutionalLayer(\n",
+    "                    pow(2, (10 - self.log2(image_size)) + i + 3), pow(2, (10 - self.log2(image_size)) + i + 4), 4, 2, 1)\n",
+    "            )\n",
+    "\n",
+    "        self.layers.append(nn.Sequential(\n",
+    "            nn.Conv2d(1024, 1, 4, 1, 0),\n",
+    "        ))\n",
+    "\n",
+    "    def log2(self, x):\n",
+    "        return int(torch.log2(torch.tensor(x)).item())\n",
+    "\n",
+    "    def ConvolutionalLayer(self, input_size, output_size, kernel_size, stride, padding):\n",
+    "        return nn.Sequential(\n",
+    "            nn.Conv2d(input_size, output_size, kernel_size,\n",
+    "                      stride, padding, bias=False),\n",
+    "            nn.BatchNorm2d(output_size),\n",
     "            nn.LeakyReLU(),\n",
-    "            nn.Conv2d(128, 256, 4, 2, 1, bias=False),  # 16x16\n",
-    "            nn.BatchNorm2d(256),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.Conv2d(256, 512, 4, 2, 1, bias=False),  # 8x8\n",
-    "            nn.BatchNorm2d(512),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.Conv2d(512, 1024, 4, 2, 1, bias=False),  # 4x4\n",
-    "            nn.BatchNorm2d(1024),\n",
-    "            nn.LeakyReLU(),\n",
-    "            nn.Conv2d(1024, 1, 4),\n",
     "        )\n",
     "\n",
     "    def forward(self, value):\n",
-    "        return self.seq(value)\n"
+    "        output = value\n",
+    "        for layer in self.layers:\n",
+    "            output = layer(output)\n",
+    "        return output\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Weight Initialization "
    ]
   },
   {
@@ -119,19 +170,35 @@
     "            nn.init.normal_(m.weight.data, 0.0, 0.02)\n",
     "        if isinstance(m, (nn.BatchNorm2d)):\n",
     "            nn.init.normal_(m.weight.data, 1.0, 0.02)\n",
-    "            nn.init.constant_(m.bias.data, 0)\n",
+    "            nn.init.constant_(m.bias.data, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(dataloader, epoch, load=False):\n",
     "\n",
-    "def train(dataloader, epoch):\n",
-    "\n",
-    "    critic = Critic()\n",
-    "    critic = torch.load(PATH + \"Cnet.pth\")\n",
+    "    critic = Critic(IMAGESIZE)\n",
+    "    if load:\n",
+    "        critic = torch.load(PATH + \"Cnet.pth\")\n",
     "    critic.train()\n",
     "    critic.apply(initialize_weights)\n",
     "    critic.to(device=DEVICE)\n",
     "    print(critic)\n",
     "\n",
-    "    generator = Generator()\n",
-    "    generator = torch.load(PATH + \"Gnet.pth\")\n",
+    "    generator = Generator(IMAGESIZE)\n",
+    "    if load:\n",
+    "        generator = torch.load(PATH + \"Gnet.pth\")\n",
     "    generator.train()\n",
     "    generator.apply(initialize_weights)\n",
     "    generator.to(device=DEVICE)\n",
@@ -139,8 +206,6 @@
     "\n",
     "    optim_critic = optim.RMSprop(critic.parameters(), lr=0.00005)\n",
     "    optim_generator = optim.RMSprop(generator.parameters(), lr=0.00005)\n",
-    "\n",
-    "    static_noise = torch.randn((BATCH, 100, 1, 1), device=DEVICE)\n",
     "    tensorboard_step = 0\n",
     "    writer = SummaryWriter(\"runs/GAN/test\")\n",
     "\n",
@@ -195,12 +260,26 @@
     "\n",
     "        print(\"----------------\\n\\rsaving...\")\n",
     "        torch.save(generator, PATH + \"Gnet.pth\")\n",
-    "        torch.save(generator, PATH + \"Cnet.pth\")\n",
+    "        torch.save(critic, PATH + \"Cnet.pth\")\n",
     "        writer.flush()\n",
     "        print(\"saved\\n\\r----------------\")\n",
     "    writer.flush()\n",
-    "    writer.close()\n",
-    "\n",
+    "    writer.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Log to Tensorboard Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def logToTensorboard(ld, lg, static_noise, writer, step, generator, real):\n",
     "    with torch.no_grad():\n",
     "        writer.add_scalars('current_run', {'loss_Critic': torch.mean(torch.tensor(ld)).item(\n",
@@ -213,7 +292,14 @@
     "        real_grid = torchvision.utils.make_grid(\n",
     "            real[:BATCH], normalize=True\n",
     "        )\n",
-    "        writer.add_image(\"RealImage\", real_grid, global_step=step)\n"
+    "        writer.add_image(\"RealImage\", real_grid, global_step=step)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Starting Code to Work with asynchronous data loading"
    ]
   },
   {
@@ -223,7 +309,7 @@
    "outputs": [],
    "source": [
     "def start():\n",
-    "    train(DATALOADER, 50)\n",
+    "    train(DATALOADER, 50, load=False)\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
