--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Imports"
+    "### ALL"
    ]
   },
   {
@@ -16,62 +16,35 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "from torchvision.transforms.transforms import Resize\n",
     "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
     "import torchvision\n",
     "from torch.utils.data import DataLoader\n",
     "import torchvision.transforms as transforms\n",
-    "from torch.utils.tensorboard import SummaryWriter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Constants"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "\n",
     "PATH = './model/'\n",
     "\n",
     "if torch.cuda.is_available():\n",
-    "    DEVICE = torch.device(\"cuda\")\n",
+    "    DEVICE = torch.device(\"cuda:0\")\n",
     "else:\n",
     "    DEVICE = torch.device(\"cpu\")\n",
     "\n",
     "BATCH = 32\n",
     "\n",
-    "IMAGESIZE = 256\n",
+    "IMAGESIZE = 64\n",
     "\n",
-    "DATASET = torchvision.datasets.ImageFolder(\"data\", transforms.Compose([\n",
+    "LOAD = True\n",
+    "\n",
+    "DATASET = torchvision.datasets.ImageFolder(\"../data\", transforms.Compose([\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Resize(IMAGESIZE),\n",
     "    transforms.Normalize([0.5, 0.5, 0.5], [0.5, 0.5, 0.5])\n",
     "]))\n",
     "\n",
     "DATALOADER = DataLoader(dataset=DATASET, batch_size=BATCH,\n",
-    "                        shuffle=True, pin_memory=True, num_workers=6, drop_last=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Resizable Neural Networks "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                        shuffle=True, pin_memory=True, num_workers=12, drop_last=True, prefetch_factor=3)\n",
+    "\n",
+    "\n",
     "class Generator(nn.Module):\n",
     "    def __init__(self, image_size):\n",
     "        super(Generator, self).__init__()\n",
@@ -126,7 +99,7 @@
     "        for i in range(self.log2(image_size)-3):\n",
     "            self.layers.append(\n",
     "                self.ConvolutionalLayer(\n",
-    "                    pow(2, (10 - self.log2(image_size)) + i + 3), pow(2, (10 - self.log2(image_size)) + i + 4), 4, 2, 1)\n",
+    "                    pow(2, 10 - self.log2(image_size) + i + 3), pow(2, 10 - self.log2(image_size) + i + 4), 4, 2, 1)\n",
     "            )\n",
     "\n",
     "        self.layers.append(nn.Sequential(\n",
@@ -148,69 +121,31 @@
     "        output = value\n",
     "        for layer in self.layers:\n",
     "            output = layer(output)\n",
-    "        return output\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Weight Initialization "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return output\n",
+    "\n",
+    "\n",
     "def initialize_weights(model):\n",
     "    for m in model.modules():\n",
     "        if isinstance(m, (nn.Conv2d, nn.ConvTranspose2d)):\n",
     "            nn.init.normal_(m.weight.data, 0.0, 0.02)\n",
     "        if isinstance(m, (nn.BatchNorm2d)):\n",
     "            nn.init.normal_(m.weight.data, 1.0, 0.02)\n",
-    "            nn.init.constant_(m.bias.data, 0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Training Code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train(dataloader, epoch, load=False):\n",
+    "            nn.init.constant_(m.bias.data, 0)\n",
+    "\n",
+    "\n",
+    "def train(dataloader, epoch):\n",
     "\n",
     "    critic = Critic(IMAGESIZE)\n",
-    "    if load:\n",
-    "        critic = torch.load(PATH + \"Cnet.pth\")\n",
-    "    critic.train()\n",
-    "    critic.apply(initialize_weights)\n",
-    "    critic.to(device=DEVICE)\n",
-    "    print(critic)\n",
+    "    critic = initialize_model(critic, \"Cnet.pth\")\n",
     "\n",
     "    generator = Generator(IMAGESIZE)\n",
-    "    if load:\n",
-    "        generator = torch.load(PATH + \"Gnet.pth\")\n",
-    "    generator.train()\n",
-    "    generator.apply(initialize_weights)\n",
-    "    generator.to(device=DEVICE)\n",
-    "    print(generator)\n",
+    "    generator = initialize_model(generator, \"Gnet.pth\")\n",
     "\n",
     "    optim_critic = optim.RMSprop(critic.parameters(), lr=0.00005)\n",
     "    optim_generator = optim.RMSprop(generator.parameters(), lr=0.00005)\n",
     "    tensorboard_step = 0\n",
     "    writer = SummaryWriter(\"runs/GAN/test\")\n",
     "\n",
-    "    ld = []\n",
-    "    lg = []\n",
     "    for i in range(epoch):\n",
     "        print(f\"epoch: {i+1}\")\n",
     "        iter = 0\n",
@@ -228,10 +163,9 @@
     "                loss_critic = -(torch.mean(critic_real) -\n",
     "                                torch.mean(critic_output))\n",
     "\n",
-    "                ld.append(loss_critic.item())\n",
     "                for param in critic.parameters():\n",
     "                    param.grad = None\n",
-    "                loss_critic.backward(retain_graph=True)\n",
+    "                loss_critic.backward()\n",
     "                optim_critic.step()\n",
     "\n",
     "                # weight clipping\n",
@@ -243,85 +177,86 @@
     "            generator_fake = generator(generator_noise)\n",
     "            generator_output = critic(generator_fake).reshape(-1)\n",
     "            loss_generator = -torch.mean(generator_output)\n",
-    "            lg.append(loss_generator.item())\n",
     "            for param in generator.parameters():\n",
     "                param.grad = None\n",
     "            loss_generator.backward()\n",
     "            optim_generator.step()\n",
     "            iter += 1\n",
-    "\n",
-    "            if iter % 50 == 0 or iter == 1:\n",
+    "            if iter % 400 == 0:\n",
     "                # unnecessary duplicated code\n",
-    "                logToTensorboard(ld, lg, generator_noise, writer,\n",
-    "                                 tensorboard_step, generator, image)\n",
+    "                logToTensorboard(generator_fake, writer,\n",
+    "                                 tensorboard_step)\n",
     "                tensorboard_step += 1\n",
-    "                ld = []\n",
-    "                lg = []\n",
+    "                save(generator, critic, writer)\n",
     "\n",
-    "        print(\"----------------\\n\\rsaving...\")\n",
-    "        torch.save(generator, PATH + \"Gnet.pth\")\n",
-    "        torch.save(critic, PATH + \"Cnet.pth\")\n",
-    "        writer.flush()\n",
-    "        print(\"saved\\n\\r----------------\")\n",
+    "        save(generator, critic, writer)\n",
     "    writer.flush()\n",
-    "    writer.close()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Log to Tensorboard Code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def logToTensorboard(ld, lg, static_noise, writer, step, generator, real):\n",
+    "    writer.close()\n",
+    "\n",
+    "\n",
+    "def initialize_model(model, file):\n",
+    "    model.to(device=DEVICE)\n",
+    "    model.train()\n",
+    "    model.apply(initialize_weights)\n",
+    "    if torch.cuda.device_count() > 1:\n",
+    "        print(\"Using: '\", torch.cuda.device_count(), \"' Devices\")\n",
+    "        model = nn.DataParallel(model)\n",
+    "    if LOAD:\n",
+    "        model.load_state_dict(torch.load(PATH + file))\n",
+    "    print(model)\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "def save(generator, critic, writer):\n",
+    "    print(\"----------------\\r\\nsaving\\r\\n.\")\n",
+    "    torch.save(generator.state_dict(), PATH + \"Gnet.pth\")\n",
+    "    print(\".\")\n",
+    "    torch.save(critic.state_dict(), PATH + \"Cnet.pth\")\n",
+    "    print(\".\")\n",
+    "    writer.flush()\n",
+    "    print(\"saved\\r\\n----------------\")\n",
+    "\n",
+    "\n",
+    "def logToTensorboard(fake, writer, step):\n",
     "    with torch.no_grad():\n",
-    "        writer.add_scalars('current_run', {'loss_Critic': torch.mean(torch.tensor(ld)).item(\n",
-    "        ), 'loss_Generator': torch.mean(torch.tensor(lg)).item()}, global_step=step)\n",
-    "        test = generator(static_noise).cpu()\n",
-    "        test_grid = torchvision.utils.make_grid(\n",
-    "            test[:BATCH], normalize=True\n",
+    "        fake.cpu()\n",
+    "        fake_grid = torchvision.utils.make_grid(\n",
+    "            fake[:BATCH], normalize=True\n",
     "        )\n",
-    "        writer.add_image(\"TestImage\", test_grid, global_step=step)\n",
-    "        real_grid = torchvision.utils.make_grid(\n",
-    "            real[:BATCH], normalize=True\n",
-    "        )\n",
-    "        writer.add_image(\"RealImage\", real_grid, global_step=step)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Starting Code to Work with asynchronous data loading"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        writer.add_image(\"TestImage\", fake_grid, global_step=step)\n",
+    "\n",
+    "\n",
     "def start():\n",
-    "    train(DATALOADER, 50, load=False)\n",
+    "    train(DATALOADER, 100)\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    start()"
+    "    if torch.cuda.is_available():\n",
+    "        print(\"---\\r\\nGPU MODE\\r\\n---\")\n",
+    "    else:\n",
+    "        print(\"---\\r\\nCPU MODE\\r\\n---\")\n",
+    "    if LOAD:\n",
+    "        print(\"---\\r\\nLOAD MODE\\r\\n---\")\n",
+    "    start()\n"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.9.13 64-bit (microsoft store)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.9.13"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "8e284ee3255a07ad8bf76694974743c4c81cb57e7c969474d752d949b11d721e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
