--- a/test.ipynb
+++ b/test.ipynb
@@ -3,81 +3,92 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import torch\r\n",
-    "import torch.nn as nn\r\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
     "import matplotlib.pyplot as plt"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "class Generator(nn.Module):\r\n",
-    "    def __init__(self):\r\n",
-    "        super(Generator, self).__init__()\r\n",
-    "        self.form = nn.Linear(100,16384)\r\n",
-    "        self.seq = nn.Sequential(\r\n",
-    "            nn.ConvTranspose2d(1024,512,4,2,1),\r\n",
-    "            nn.BatchNorm2d(512),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(512,256,4,2,1),\r\n",
-    "            nn.BatchNorm2d(256),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(256,128,4,2,1),\r\n",
-    "            nn.BatchNorm2d(128),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(128,64,4,2,1),\r\n",
-    "            nn.BatchNorm2d(64),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(64,32,4,2,1),\r\n",
-    "            nn.BatchNorm2d(32),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(32,16,4,2,1),\r\n",
-    "            nn.BatchNorm2d(16),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(16,8,4,2,1),\r\n",
-    "            nn.BatchNorm2d(8),\r\n",
-    "            nn.LeakyReLU(),\r\n",
-    "            nn.ConvTranspose2d(8,3,4,2,1),\r\n",
-    "            nn.BatchNorm2d(3),\r\n",
-    "            nn.Sigmoid(),\r\n",
-    "        )\r\n",
-    "    \r\n",
-    "    def forward(self, value):\r\n",
-    "        value = self.form(value)\r\n",
-    "        value = value.view(-1,1024,4,4)\r\n",
+    "class Generator(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Generator, self).__init__()\n",
+    "        self.form = nn.Linear(100,16384)\n",
+    "        self.seq = nn.Sequential(\n",
+    "            nn.ConvTranspose2d(1024,512,4,2,1),\n",
+    "            nn.BatchNorm2d(512),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.ConvTranspose2d(512,256,4,2,1),\n",
+    "            nn.BatchNorm2d(256),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.ConvTranspose2d(256,128,4,2,1),\n",
+    "            nn.BatchNorm2d(128),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.ConvTranspose2d(128,64,4,2,1),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.ConvTranspose2d(64,32,4,2,1),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.ConvTranspose2d(32,16,4,2,1),\n",
+    "            nn.BatchNorm2d(16),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.ConvTranspose2d(16,8,4,2,1),\n",
+    "            nn.BatchNorm2d(8),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.ConvTranspose2d(8,3,4,2,1),\n",
+    "            nn.BatchNorm2d(3),\n",
+    "            nn.Sigmoid(),\n",
+    "        )\n",
+    "    \n",
+    "    def forward(self, value):\n",
+    "        value = self.form(value)\n",
+    "        value = value.view(-1,1024,4,4)\n",
     "        return self.seq(value)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "model = Generator()\r\n",
-    "\r\n",
-    "PATH = './model/Gnet.pth'\r\n",
-    "\r\n",
-    "noise = torch.randn(1,100, device=\"cuda\")\r\n",
-    "model = model = torch.load(PATH, map_location=torch.device('cuda'))\r\n",
-    "out = model(noise)\r\n",
-    "print(out.shape)\r\n",
-    "\r\n",
-    "plt.imshow(out.view(3,1024,1024).permute(1,2,0).cpu().detach().numpy())\r\n",
-    "plt.show()"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "model = Generator()\n",
+    "\n",
+    "PATH = './model/Gnet.pth'\n",
+    "\n",
+    "noise = torch.randn(1,100, device=\"cuda\")\n",
+    "model = model = torch.load(PATH, map_location=torch.device('cuda'))\n",
+    "out = model(noise)\n",
+    "print(out.shape)\n",
+    "\n",
+    "plt.imshow(out.view(3,1024,1024).permute(1,2,0).cpu().detach().numpy())\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "kernelspec": {
+   "display_name": "Python 3.9.13 64-bit (microsoft store)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.13"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "8e284ee3255a07ad8bf76694974743c4c81cb57e7c969474d752d949b11d721e"
+   }
   }
  },
  "nbformat": 4,
